# Tencer

./: .gitignore  Cargo.toml  GiftBox.txt  README.md  Rocket.toml  convert_outift_dump.py  convert_skin_dump.py  outfits_with_guids.txt  skins.txt  ue.json  uo.json  uo_insane.json
migrations/2020-10-09-132731_create_user_tables/: down.sql  up.sql
migrations/2020-11-22-193140_add_platform_ids/: down.sql  up.sql
migrations/2020-11-24-013903_create_config_table/: down.sql  up.sql
migrations/2020-11-25-021430_add_avatar/: down.sql  up.sql
src/: main.rs  photon.rs
src/api/: activities.rs  avatar.rs  challenge.rs  config.rs  equipment.rs  events.rs  gamesessions.rs  images.rs  messages.rs  mod.rs  platformlogin.rs  playerreporting.rs  players.rs  relationships.rs  settings.rs
src/data/: accounts.rs  config.rs  mod.rs  schema.rs
src/ws/: mod.rs
src/ws/api/: mod.rs  sub.rs
