[package]
name = "tencer"
version = "0.1.0"
authors = ["567"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
diesel = { version = "1.4", features = [ "chrono" ] }
diesel_migrations = "1.4"
chrono = { version = "0.4", features = [ "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "0.3", features = [ "full" ] }
tokio-tungstenite = "0.12"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
jsonwebtoken = "7.2"
uuid = { version = "0.8", features = [ "serde", "v4" ]}
rand = "0.7"

[dependencies.rocket_contrib]
version = "0.4"
default_features = false
features = [ "diesel_sqlite_pool", "json" ]

[dependencies.libsqlite3-sys]
version = "0.9"
default_features = false
features = [ "bundled" ]